--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fmahieu.switter">
 
@@ -7,9 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-
-        <activity android:name="com.fmahieu.switter.Views.MainActivity" android:launchMode="singleTop">
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".Views.MainActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.MAIN" />
@@ -17,6 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.fmahieu.switter.Views.SignUpInfoActivity" />
+        <activity android:name=".Views.SignUpInfoActivity" />
+        <activity android:name=".Views.StatusActivity"/>
     </application>
+
 </manifest>
