--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,23 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fmahieu.switter">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        >
+
+        <service android:name="org.eclipse.paho.android.service.MqttService" />
         <activity
             android:name=".Views.MainActivity"
             android:launchMode="singleTop">
@@ -26,6 +36,8 @@
             android:name=".Views.NewStatusActivity"
             android:theme="@style/AppTheme.PopOutActivityStyle" />
         <activity android:name=".Views.UpdateProfilePictureActivity"
+            android:theme="@style/AppTheme.PopOutActivityStyle"/>
+        <activity android:name=".Views.ResetPasswordActivity"
             android:theme="@style/AppTheme.PopOutActivityStyle"/>
         <activity android:name=".Views.HashtagActivity" />
     </application>
